--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ out/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+/src/test/resources/js/
+/src/test/resources/css/
+/src/test/resources/img/
